TestSuite/errors/err0190.pas

[System.Runtime.InteropServices.DllImport]
procedure Test;
begin
  
end;
begin
  
end.